# bash-mrnative

./: .appveyor.yml  .travis.yml  Makefile.am  README.md  autoclean.sh  autogen.sh  config-sys.sh  configure.ac  develop.txt  mrsystem.conf
3rd/: Makefile  Makefile.aircrack  Makefile.bitcoin  Makefile.common  Makefile.ffmpeg  Makefile.gnuplot  Makefile.medialib  Makefile.ns2  pbs-avxsynth-newapi.patch  pbs-faac-1.28-1.patch  pbs-ffmpeg-1.patch  pbs-gnuplot-lua.patch  pbs-gpac-svn-1.patch  pbs-libgd-libvpx.patch  pbs-libiconv-stdio.patch  pbs-libomxil-bellagio-emnu.patch  pbs-ncurses-6.0-debian-mawk.patch  pbs-oclhashcat-all.patch  pbs-opencv-cmake-pch-2.4.diff  pbs-opencv-cmake-pch-3.1.diff  pbs-readline-pkgconfig.patch  pbs-udev-182-librt.patch  pbs-xmrstak-nodonate.patch  runcompile-bitcoin.sh  runcompile.sh  striptarbar.sh
app-conv2dash/: README.md  e1map.sh  e1red.sh  e2map.sh  e2red.sh  e3red.sh  liball.sh  libapp.sh
app-conv2dash/input-examples/: benchmark-test1.sh  get-transcode.sh  input-bigbuckbunny.txt  input-elephantsdream.txt  input-sintel.txt  input-sinteltrailer.txt  input-tearsofsteel.txt  input-test1-mkv.txt  input-test1-mkvpic.txt  input-test1-pic.txt  transcode-test1-mp4.conf  transcode-test1-webm.conf  transcode.conf
app-ns2/: checkall.sh  cleanall.sh  e1map.sh  e2map.sh  e2red.sh  e3map.sh  liball.sh  libapp.sh  libns2figures.sh  main.tcl  plotall.sh  runall.sh
app-ns2/common/: config-nodes.sh  dash.tcl  docsis-conf.bbaqm.tcl  docsis-conf.codel.tcl  docsis-conf.drr.tcl  docsis-conf.fcfs.tcl  docsis-conf.fs.tcl  docsis-conf.fsaqm.tcl  docsis-conf.pie.tcl  docsis-conf.red.tcl  docsis-conf.sfqcodel.tcl  docsis-conf.tsfq.tcl  docsis-conf.wtfsaqmdc.tcl  flows-util.tcl  patchscripts.sh  ping-util.tcl  sched-defs.tcl  tcpudp-util.tcl
app-ns2/common/scripts/: getAvgPingRTTSilent.awk  getAvgWebBW.sh  getBW.sh  getCMConcatstats.awk  getCMConcatstats.sh  getCMMAPstats.awk  getCMMAPstats.sh  getCMTSMAPstats.awk  getCMTSMAPstats.sh  getCMTSstats.awk  getCMstats.awk  getCMstats.sh  getSFstats.sh  getTCPstats.sh  getUDPstats.awk  getWRT.awk  getWRTSilent.awk  udp2tcpstats.awk
app-ns2/input-examples/: config-jjmbase.sh  config-jjmprof192m1p.sh  config-proj-baseh2l.sh  config-proj-verifyd31.sh
app-test/: README.md  e1map.sh  e2map.sh  liball.sh  libapp.sh
app-test/input/: config-test.conf
app-wpapw/: config-wpapw.conf  e1map.sh  e2map.sh  liball.sh  libapp.sh
app-wpapw/input-examples/: config-wpapw.conf
doc/: Doxyfile.in  Makefile.am  Makefile.latex  chap-appconv2dash.tex  chap-appns2.tex  chap-appwpapw.tex  chap-design.tex  chap-intro.tex  cndoc.tex  genheader.tex  mrnative-manual.tex  mrnative-talk.tex  mrns2fig-manual.tex
doc/figures/: flowchart-mr-media-transcode.dia  flowchart-mr-media-transcode.eps  flowchart-mr-ns2sim.dia  flowchart-mr-ns2sim.eps  flowchart-mr-wpapw.dia  flowchart-mr-wpapw.eps  mrnative-stack.dia  mrnative-stack.eps
doc/figures-appconv2dash/: dash-parameters.dia  dash-parameters.eps  flowchart-0-system.dia  flowchart-0-system.eps  flowchart-1-dashjsmpd.dia  flowchart-1-dashjsmpd.eps  flowchart-1-googletoolmpd.dia  flowchart-1-googletoolmpd.eps  flowchart-1-mp4boxmpd.dia  flowchart-1-mp4boxmpd.eps  flowchart-1-transcode.eps  flowchart-2-emulation.dia  flowchart-3-dataanalysis.dia
lib/: libbash.sh  libconfig.sh  libfs.sh  libhadoop.sh  libns2figures.sh  libplot.sh  libshrt.sh
projconfigs/: config-jjmbase.sh  config-jjmprof192m1p.sh  config-jjmprof192m2p.sh  config-jjmprof192m4p.sh  config-jjmprof24m1p.sh  config-jjmprof24m2p.sh  config-jjmprof24m4p.sh  config-proj-baseh2l.sh  config-proj-basel2h.sh  config-proj-verifyd30.sh  config-proj-verifyd31.sh
projtools/: checkall.sh  checkproj.sh  cleanall.sh  cleanproj.sh  createconf.sh  e1map.sh  e2map.sh  e2red.sh  e3map.sh  liball.sh  libapp.sh  libns2config.sh  libns2figures.sh  main.tcl  mod-hadooppbs-jobmain.sh  mod-hadooppbs-setenv.sh  mod-setenv-hadoop.sh  mod-share-worker.sh  plotall.sh  plotfigns2.sh  plotproj.sh  run-conf.tcl  run-hadoop.sh  run-hadooppbs.sh  run-sh1.sh  runall.sh  runproj.sh
projtools/common/: cleanup.tcl  docsis-conf.ared.tcl  docsis-conf.fsaqmdc.tcl  docsis-conf.pb2codel.tcl  docsis-conf.pb3codel.tcl  docsis-conf.pb4codel.tcl  docsis-conf.pf.tcl  docsis-conf.wtbbaqm.tcl  docsis-util.tcl  getall.sh  lossmon-util.tcl  networks.tcl  profile.tcl
projtools/common/scripts/: getAvgPingRTT.awk  getAvgPingRTT.sh  getAvgWebBW2.awk  getBGSFstats.awk  getCMTSstats.sh  getCMTSstatsperchannel.awk  getCMTSstatsperchannel.sh  getSFstats.awk  getTCPstats.awk  getUDPstats.sh  getWRT.sh  proc1.awk  proc1.sh
