
include_HEADERS = \
    $(top_srcdir)/lib/libbash.sh \
    $(top_srcdir)/lib/libconfig.sh \
    $(top_srcdir)/lib/libfs.sh \
    $(top_srcdir)/lib/libplot.sh \
    $(top_srcdir)/lib/libshrt.sh \
    $(top_srcdir)/projtools/liball.sh \
    $(top_srcdir)/projtools/libapp.sh \
    $(top_srcdir)/projtools/libns2config.sh \
    $(top_srcdir)/projtools/libns2figures.sh \
    $(top_srcdir)/projtools/checkall.sh \
    $(top_srcdir)/projtools/cleanall.sh \
    $(top_srcdir)/projtools/e1map.sh \
    $(top_srcdir)/projtools/e2map.sh \
    $(top_srcdir)/projtools/e2red.sh \
    $(top_srcdir)/projtools/e3map.sh \
    $(top_srcdir)/projtools/mod-hadooppbs-jobmain.sh \
    $(top_srcdir)/projtools/mod-hadooppbs-setenv.sh \
    $(top_srcdir)/projtools/mod-share-worker.sh \
    $(top_srcdir)/projtools/plotall.sh \
    $(top_srcdir)/projtools/runall.sh \
    $(top_srcdir)/projtools/run-hadoop.sh \
    $(top_srcdir)/projtools/run-hadooppbs.sh \
    $(top_srcdir)/projtools/run-sh1.sh \
    $(top_srcdir)/projtools/main.tcl \
    $(top_srcdir)/projtools/run-conf.tcl \
    $(top_srcdir)/projtools/common/BG.dat \
    $(top_srcdir)/projtools/common/channels.dat \
    $(top_srcdir)/projtools/common/channels1G6.dat \
    $(top_srcdir)/projtools/common/cleanup.tcl \
    $(top_srcdir)/projtools/common/CMBGDS.dat \
    $(top_srcdir)/projtools/common/CMBGUS.dat \
    $(top_srcdir)/projtools/common/dash.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.ared.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.bbaqm.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.codel.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.drr.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.fcfs.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.fs.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.fsaqm.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.fsaqmdc.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.pb2codel.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.pb3codel.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.pb4codel.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.pf.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.pie.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.red.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.sfqcodel.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.tsfq.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.wtbbaqm.tcl \
    $(top_srcdir)/projtools/common/docsis-conf.wtfsaqmdc.tcl \
    $(top_srcdir)/projtools/common/docsis-util.tcl \
    $(top_srcdir)/projtools/common/flows-util.tcl \
    $(top_srcdir)/projtools/common/getall.sh \
    $(top_srcdir)/projtools/common/lossmon-util.tcl \
    $(top_srcdir)/projtools/common/networks.tcl \
    $(top_srcdir)/projtools/common/ping-util.tcl \
    $(top_srcdir)/projtools/common/profile.tcl \
    $(top_srcdir)/projtools/common/sched-defs.tcl \
    $(top_srcdir)/projtools/common/tcpudp-util.tcl \
    $(NULL)

noinst_HEADERS= \
    $(top_srcdir)/README.md \
    $(top_srcdir)/config-sys.sh \
    $(top_srcdir)/doc/mrns2fig-manual.tex \
    $(top_srcdir)/doc/cndoc.tex \
    $(top_srcdir)/doc/chap-design.tex \
    $(top_srcdir)/doc/figures/flowchart-1-ns2figures.dia \
    $(top_srcdir)/doc/figures/flowchart-1-ns2figures.eps \
    $(top_srcdir)/projconfigs/config-jjmbase.sh \
    $(top_srcdir)/projconfigs/config-jjmprof192m1p.sh \
    $(top_srcdir)/projconfigs/config-jjmprof192m2p.sh \
    $(top_srcdir)/projconfigs/config-jjmprof192m4p.sh \
    $(top_srcdir)/projconfigs/config-jjmprof24m1p.sh \
    $(top_srcdir)/projconfigs/config-jjmprof24m2p.sh \
    $(top_srcdir)/projconfigs/config-jjmprof24m4p.sh \
    $(top_srcdir)/projconfigs/config-proj-baseh2l.sh \
    $(top_srcdir)/projconfigs/config-proj-basel2h.sh \
    $(top_srcdir)/projconfigs/config-proj-verifyd30.sh \
    $(top_srcdir)/projconfigs/config-proj-verifyd31.sh \
    $(top_srcdir)/mytest/* \
    $(NULL)
