
DOC_FILES0= \
    $(top_srcdir)/README.md \
    $(top_srcdir)/doc/mrns2fig-manual.tex \
    $(top_srcdir)/doc/cndoc.tex \
    $(top_srcdir)/doc/chap-design.tex \
    $(top_srcdir)/doc/figures/flowchart-1-ns2figures.dia \
    $(top_srcdir)/doc/figures/flowchart-1-ns2figures.eps \
    $(NULL)

DOC_FILES= \
    $(NULL)

include_HEADERS = \
    $(top_srcdir)/bin/mod-hadooppbs-jobmain.sh \
    $(top_srcdir)/bin/mod-setenv-hadoop.sh \
    $(top_srcdir)/bin/mod-share-worker.sh \
    $(top_srcdir)/bin/run-hadoop.sh \
    $(top_srcdir)/bin/run-hadooppbs.sh \
    $(top_srcdir)/bin/run-sh1.sh \
    $(top_srcdir)/lib/libbash.sh \
    $(top_srcdir)/lib/libconfig.sh \
    $(top_srcdir)/lib/libfs.sh \
    $(top_srcdir)/lib/libplot.sh \
    $(top_srcdir)/lib/libshrt.sh \
    $(top_srcdir)/lib/libhadoop.sh \
    $(top_srcdir)/app-ns2/liball.sh \
    $(top_srcdir)/app-ns2/libapp.sh \
    $(top_srcdir)/app-ns2/libns2figures.sh \
    $(top_srcdir)/app-ns2/checkall.sh \
    $(top_srcdir)/app-ns2/cleanall.sh \
    $(top_srcdir)/app-ns2/e1map.sh \
    $(top_srcdir)/app-ns2/e2map.sh \
    $(top_srcdir)/app-ns2/e2red.sh \
    $(top_srcdir)/app-ns2/e3map.sh \
    $(top_srcdir)/app-ns2/plotall.sh \
    $(top_srcdir)/app-ns2/runall.sh \
    $(top_srcdir)/app-ns2/main.tcl \
    $(top_srcdir)/app-ns2/run-conf.tcl \
    $(top_srcdir)/app-ns2/common/BG.dat \
    $(top_srcdir)/app-ns2/common/channels.dat \
    $(top_srcdir)/app-ns2/common/channels1G6.dat \
    $(top_srcdir)/app-ns2/common/cleanup.tcl \
    $(top_srcdir)/app-ns2/common/CMBGDS.dat \
    $(top_srcdir)/app-ns2/common/CMBGUS.dat \
    $(top_srcdir)/app-ns2/common/dash.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.ared.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.bbaqm.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.codel.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.drr.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.fcfs.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.fs.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.fsaqm.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.fsaqmdc.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.pb2codel.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.pb3codel.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.pb4codel.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.pf.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.pie.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.red.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.sfqcodel.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.tsfq.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.wtbbaqm.tcl \
    $(top_srcdir)/app-ns2/common/docsis-conf.wtfsaqmdc.tcl \
    $(top_srcdir)/app-ns2/common/docsis-util.tcl \
    $(top_srcdir)/app-ns2/common/flows-util.tcl \
    $(top_srcdir)/app-ns2/common/getall.sh \
    $(top_srcdir)/app-ns2/common/lossmon-util.tcl \
    $(top_srcdir)/app-ns2/common/networks.tcl \
    $(top_srcdir)/app-ns2/common/ping-util.tcl \
    $(top_srcdir)/app-ns2/common/profile.tcl \
    $(top_srcdir)/app-ns2/common/sched-defs.tcl \
    $(top_srcdir)/app-ns2/common/tcpudp-util.tcl \
    $(top_srcdir)/autogen.sh \
    $(top_srcdir)/autoclean.sh \
    $(NULL)

noinst_HEADERS= \
    $(top_srcdir)/install-sh \
    $(top_srcdir)/mrsystem.conf \
    $(top_srcdir)/app-ns2/input-examples/config-jjmbase.sh \
    $(top_srcdir)/app-ns2/input-examples/config-jjmprof192m1p.sh \
    $(top_srcdir)/app-ns2/input-examples/config-jjmprof192m2p.sh \
    $(top_srcdir)/app-ns2/input-examples/config-jjmprof192m4p.sh \
    $(top_srcdir)/app-ns2/input-examples/config-jjmprof24m1p.sh \
    $(top_srcdir)/app-ns2/input-examples/config-jjmprof24m2p.sh \
    $(top_srcdir)/app-ns2/input-examples/config-jjmprof24m4p.sh \
    $(top_srcdir)/app-ns2/input-examples/config-proj-baseh2l.sh \
    $(top_srcdir)/app-ns2/input-examples/config-proj-basel2h.sh \
    $(top_srcdir)/app-ns2/input-examples/config-proj-verifyd30.sh \
    $(top_srcdir)/app-ns2/input-examples/config-proj-verifyd31.sh \
    $(top_srcdir)/mytest/* \
    $(DOC_FILES) \
    $(NULL)
